--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -307,10 +307,14 @@ XMLSEC_MSCRYPTO_OBJS_A = \
 
 XMLSEC_MSCNG_OBJS = \
 	$(XMLSEC_MSCNG_INTDIR)\app.obj\
-	$(XMLSEC_MSCNG_INTDIR)\crypto.obj
+	$(XMLSEC_MSCNG_INTDIR)\crypto.obj\
+	$(XMLSEC_MSCNG_INTDIR)\digests.obj\
+	$(XMLSEC_MSCNG_INTDIR)\strings.obj
 XMLSEC_MSCNG_OBJS_A = \
 	$(XMLSEC_MSCNG_INTDIR_A)\app.obj\
-	$(XMLSEC_MSCNG_INTDIR_A)\crypto.obj
+	$(XMLSEC_MSCNG_INTDIR_A)\crypto.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\digests.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj
 
 #
 # The preprocessor and its options.
@@ -425,8 +429,8 @@ XMLSEC_NSS_ALIBS        = smime3.lib ssl3.lib nss3.lib libnspr4_s.lib libplds4_s
 XMLSEC_MSCRYPTO_SOLIBS  = kernel32.lib user32.lib gdi32.lib Crypt32.lib Advapi32.lib
 XMLSEC_MSCRYPTO_ALIBS   = kernel32.lib user32.lib gdi32.lib Crypt32.lib Advapi32.lib
 
-XMLSEC_MSCNG_SOLIBS  = kernel32.lib user32.lib gdi32.lib Crypt32.lib Advapi32.lib
-XMLSEC_MSCNG_ALIBS   = kernel32.lib user32.lib gdi32.lib Crypt32.lib Advapi32.lib
+XMLSEC_MSCNG_SOLIBS  = kernel32.lib user32.lib gdi32.lib Advapi32.lib Bcrypt.lib
+XMLSEC_MSCNG_ALIBS   = kernel32.lib user32.lib gdi32.lib Advapi32.lib Bcrypt.lib
 
 
 # The archiver and its options.
