--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -307,14 +307,20 @@ XMLSEC_MSCRYPTO_OBJS_A = \
 
 XMLSEC_MSCNG_OBJS = \
 	$(XMLSEC_MSCNG_INTDIR)\app.obj\
+	$(XMLSEC_MSCNG_INTDIR)\certkeys.obj \
 	$(XMLSEC_MSCNG_INTDIR)\crypto.obj\
 	$(XMLSEC_MSCNG_INTDIR)\digests.obj\
-	$(XMLSEC_MSCNG_INTDIR)\strings.obj
+	$(XMLSEC_MSCNG_INTDIR)\strings.obj\
+	$(XMLSEC_MSCNG_INTDIR)\signatures.obj\
+	$(XMLSEC_MSCNG_INTDIR)\x509.obj
 XMLSEC_MSCNG_OBJS_A = \
 	$(XMLSEC_MSCNG_INTDIR_A)\app.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\certkeys.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\crypto.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\digests.obj\
-	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj
+	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\signatures.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\x509.obj
 
 #
 # The preprocessor and its options.
