--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -312,7 +312,8 @@ XMLSEC_MSCNG_OBJS = \
 	$(XMLSEC_MSCNG_INTDIR)\digests.obj\
 	$(XMLSEC_MSCNG_INTDIR)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR)\signatures.obj\
-	$(XMLSEC_MSCNG_INTDIR)\x509.obj
+	$(XMLSEC_MSCNG_INTDIR)\x509.obj\
+	$(XMLSEC_MSCNG_INTDIR)\x509vfy.obj
 XMLSEC_MSCNG_OBJS_A = \
 	$(XMLSEC_MSCNG_INTDIR_A)\app.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\certkeys.obj \
@@ -320,7 +321,8 @@ XMLSEC_MSCNG_OBJS_A = \
 	$(XMLSEC_MSCNG_INTDIR_A)\digests.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\signatures.obj\
-	$(XMLSEC_MSCNG_INTDIR_A)\x509.obj
+	$(XMLSEC_MSCNG_INTDIR_A)\x509.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\x509vfy.obj
 
 #
 # The preprocessor and its options.
