MS CNG: adopt trusted certificate (#141)
* mscng: add ECDSA-SHA256 skeleton

Also correct typos in the dsig test that checked for RSA keys before running
the ECDSA tests.

* mscng: implement xmlSecMSCngAppKeysMngrCertLoad

* mscng: start implementing xmlSecMSCngAppKeysMngrCertLoadMemory

Requires a skeleton of the x509 store class. This way we trigger the TODO in
xmlSecMSCngX509StoreInitialize() at runtime.

* mscng: implement xmlSecMSCngX509StoreInitialize and xmlSecMSCngX509StoreFinalize

* mscng: finish implementation of xmlSecMSCngAppKeysMngrCertLoadMemory

Next hit TODO is now xmlSecMSCngKeyDataX509Initialize().

* mscng: add two error handling macros

GetLastError() wrapper is suitable for the certificate handling WinAPI, the
NTSTATUS one is used by the CNG API.

Also:
- use xmlSecMSCngX509StoreFinalize at two places to reduce copy-paste
- x509 store: close memory store and collection in the right order and add
  error handling for them

* mscng: avoid early returns in x509 store destructor

So that we don't miss cleanup of the members of the context even if errors
happen.

* mscng: compare against STATUS_SUCCESS

* mscng: report error only in case of failure in x509 store destructor

* mscng: avoid tabs in x509 store code

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -307,14 +307,22 @@ XMLSEC_MSCRYPTO_OBJS_A = \
 
 XMLSEC_MSCNG_OBJS = \
 	$(XMLSEC_MSCNG_INTDIR)\app.obj\
+	$(XMLSEC_MSCNG_INTDIR)\certkeys.obj \
 	$(XMLSEC_MSCNG_INTDIR)\crypto.obj\
 	$(XMLSEC_MSCNG_INTDIR)\digests.obj\
-	$(XMLSEC_MSCNG_INTDIR)\strings.obj
+	$(XMLSEC_MSCNG_INTDIR)\strings.obj\
+	$(XMLSEC_MSCNG_INTDIR)\signatures.obj\
+	$(XMLSEC_MSCNG_INTDIR)\x509.obj\
+	$(XMLSEC_MSCNG_INTDIR)\x509vfy.obj
 XMLSEC_MSCNG_OBJS_A = \
 	$(XMLSEC_MSCNG_INTDIR_A)\app.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\certkeys.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\crypto.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\digests.obj\
-	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj
+	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\signatures.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\x509.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\x509vfy.obj
 
 #
 # The preprocessor and its options.
@@ -429,8 +437,8 @@ XMLSEC_NSS_ALIBS        = smime3.lib ssl3.lib nss3.lib libnspr4_s.lib libplds4_s
 XMLSEC_MSCRYPTO_SOLIBS  = kernel32.lib user32.lib gdi32.lib Crypt32.lib Advapi32.lib
 XMLSEC_MSCRYPTO_ALIBS   = kernel32.lib user32.lib gdi32.lib Crypt32.lib Advapi32.lib
 
-XMLSEC_MSCNG_SOLIBS  = kernel32.lib user32.lib gdi32.lib Advapi32.lib Bcrypt.lib
-XMLSEC_MSCNG_ALIBS   = kernel32.lib user32.lib gdi32.lib Advapi32.lib Bcrypt.lib
+XMLSEC_MSCNG_SOLIBS  = kernel32.lib user32.lib gdi32.lib Crypt32.lib Advapi32.lib Bcrypt.lib
+XMLSEC_MSCNG_ALIBS   = kernel32.lib user32.lib gdi32.lib Crypt32.lib Advapi32.lib Bcrypt.lib
 
 
 # The archiver and its options.
