nmake: add werror option, similar to autotools --enable-werror
Also set the warning level to /W4,
<https://docs.microsoft.com/en-us/cpp/build/reference/compiler-option-warning-level>
writes: "For a new project, it may be best to use /W4 in all compilations; this
will ensure the fewest possible hard-to-find code defects."

All emitted warnings seem to be valid, except one that generates false
positives for error macros (the error macro argument is a string constant, the
macro uses xmlSecErrorsSafeString(), so we compare a string constant with
NULL).

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -335,7 +335,14 @@ CPPFLAGS 		= /nologo
 #
 CC 				= cl.exe
 CFLAGS 			= /nologo /D "WIN32" /D "_WINDOWS" /D inline=__inline
-CFLAGS 			= $(CFLAGS) /D "_MBCS" /D "_REENTRANT"  /W1  
+# C4130: '!=': logical operation on address of string constant:
+#     this generates a false warning inside macros
+CFLAGS 			= $(CFLAGS) /D "_MBCS" /D "_REENTRANT"  /W4 /wd4130
+
+!if "$(WERROR)" == "1"
+CFLAGS 			= $(CFLAGS) /WX
+!endif
+
 CFLAGS 			= $(CFLAGS) /I$(BASEDIR) /I$(BASEDIR)\include
 CFLAGS 			= $(CFLAGS) /I$(INCPREFIX)
 CFLAGS 			= $(CFLAGS) /D PACKAGE=\"$(XMLSEC_NAME)\" 
