--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -309,9 +309,11 @@ XMLSEC_MSCNG_OBJS = \
 	$(XMLSEC_MSCNG_INTDIR)\app.obj\
 	$(XMLSEC_MSCNG_INTDIR)\certkeys.obj \
 	$(XMLSEC_MSCNG_INTDIR)\crypto.obj\
+	$(XMLSEC_MSCNG_INTDIR)\ciphers.obj \
 	$(XMLSEC_MSCNG_INTDIR)\digests.obj\
 	$(XMLSEC_MSCNG_INTDIR)\hmac.obj \
 	$(XMLSEC_MSCNG_INTDIR)\symkeys.obj \
+	$(XMLSEC_MSCNG_INTDIR)\kt_rsa.obj \
 	$(XMLSEC_MSCNG_INTDIR)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR)\signatures.obj\
 	$(XMLSEC_MSCNG_INTDIR)\x509.obj\
@@ -320,9 +322,11 @@ XMLSEC_MSCNG_OBJS_A = \
 	$(XMLSEC_MSCNG_INTDIR_A)\app.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\certkeys.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\crypto.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\ciphers.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\digests.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\hmac.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\symkeys.obj \
+	$(XMLSEC_MSCNG_INTDIR_A)\kt_rsa.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\signatures.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\x509.obj\
