--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -314,6 +314,8 @@ XMLSEC_MSCNG_OBJS = \
 	$(XMLSEC_MSCNG_INTDIR)\hmac.obj \
 	$(XMLSEC_MSCNG_INTDIR)\symkeys.obj \
 	$(XMLSEC_MSCNG_INTDIR)\kt_rsa.obj \
+	$(XMLSEC_MSCNG_INTDIR)\kw_aes.obj \
+	$(XMLSEC_MSCNG_INTDIR)\kw_des.obj \
 	$(XMLSEC_MSCNG_INTDIR)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR)\signatures.obj\
 	$(XMLSEC_MSCNG_INTDIR)\x509.obj\
@@ -327,6 +329,8 @@ XMLSEC_MSCNG_OBJS_A = \
 	$(XMLSEC_MSCNG_INTDIR_A)\hmac.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\symkeys.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\kt_rsa.obj \
+	$(XMLSEC_MSCNG_INTDIR_A)\kw_aes.obj \
+	$(XMLSEC_MSCNG_INTDIR_A)\kw_des.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\signatures.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\x509.obj\
