mscng: add keysstore support
This also requires changes in the x509 key data class. It's no longer safe to
call CertDeleteCertificateFromStore() for no longer needed certificates, as the
store may be a non-in-memory one, and the user expects that the system store is
only read by xmlsec. Non-deleting also means that we can't assert anymore that
the in-memory cert store is empty when we delete it.

We don't leak memory with this, as the refcount of the certificate contexts is
still properly decremented.

As a side effect 6 TODOs added earlier are now resolved.

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -318,6 +318,7 @@ XMLSEC_MSCNG_OBJS = \
 	$(XMLSEC_MSCNG_INTDIR)\kw_des.obj \
 	$(XMLSEC_MSCNG_INTDIR)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR)\signatures.obj\
+	$(XMLSEC_MSCNG_INTDIR)\keysstore.obj \
 	$(XMLSEC_MSCNG_INTDIR)\x509.obj\
 	$(XMLSEC_MSCNG_INTDIR)\x509vfy.obj
 XMLSEC_MSCNG_OBJS_A = \
@@ -333,6 +334,7 @@ XMLSEC_MSCNG_OBJS_A = \
 	$(XMLSEC_MSCNG_INTDIR_A)\kw_des.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\strings.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\signatures.obj\
+	$(XMLSEC_MSCNG_INTDIR_A)\keysstore.obj \
 	$(XMLSEC_MSCNG_INTDIR_A)\x509.obj\
 	$(XMLSEC_MSCNG_INTDIR_A)\x509vfy.obj
 
